// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading default overflow 1`] = `
<h4
  className="Heading fontSize2 darkGray breakWord"
  id={null}
/>
`;

exports[`Heading overflow normal 1`] = `
<h4
  className="Heading fontSize2 darkGray"
  id={null}
/>
`;

exports[`Heading small 1`] = `
<h4
  className="Heading fontSize2 darkGray breakWord"
  id={null}
/>
`;

exports[`Heading small with id 1`] = `
<h4
  className="Heading fontSize2 darkGray breakWord"
  id="account-basics"
/>
`;

exports[`Heading truncate adds a title when the children are text only 1`] = `
<h3
  className="Heading fontSize3 darkGray breakWord truncate"
  id={null}
  title="When we two parted - Lord Byron"
>
  When we two parted - Lord Byron
</h3>
`;

exports[`Heading truncate does not add a title when the children are objects 1`] = `
<h3
  className="Heading fontSize3 darkGray breakWord truncate"
  id={null}
>
  <div>
    Breakup reading:
  </div>
  When we two parted - Lord Byron
</h3>
`;

exports[`Heading xsmall with level 3 1`] = `
<h3
  className="Heading fontSize1 darkGray breakWord"
  id={null}
/>
`;
